# aruco_detector

./: README.md  package.xml  setup.py
aruco_detector/: __init__.py  aruco_detector.py
aruco_detector/aruco_recognition/: __init__.py  aruco_recognition.py
aruco_detector/scripts/: aruco_detector.py
config/: aruco_params.yaml  aruco_recognition.yaml
launch/: aruco_recognition.launch.py  detection.launch.py
