<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aruco_detector</name>
  <version>0.0.0</version>
  <description>Detector de marcadores ArUco para ROS2 que subscreve em camera1/image_raw</description>
  <maintainer email="seu@email.com">Seu Nome</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Dependências principais -->
  <depend>rclpy</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>opencv</depend> <!-- Adicionei explicitamente -->
  <depend>aruco_opencv</depend> <!-- Se estiver usando a biblioteca aruco do OpenCV -->
  
  <!-- Dependências para launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Testes -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>